# Inventory_Manager_Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
Docs/: ARCHITECTURE.md  INDEX.md  SETUP.md  TESTING.md
Week1/: hello.py  inventory.csv  processor.py
Week2/Day1/: hello.py  processor.py
Week2/Day2/: inventory.csv  processor.py
Week2/Day3/: processor.py
Week2/Day4/inventory_manager/: core.py  main.py  models.py  pyproject.toml 
Week2/Day5/inventory_manager/: core.py  main.py  models.py  pyproject.toml
Week3/: conftest.py  test_core.py  test_models.py
Week3/Day1/: models.py  test_testing.py
